src/kubernetes/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  # set your namespace
  name: <namespace>
